fix navbar spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,3 +31,12 @@ line-height: 40px;
 color: black;
 justify-content: left;
 }
+
+.logo {
+  text-align: left;
+  margin-right: 800px;
+  align-items: flex-end;
+  display: flex;
+  position: relative;
+  padding-right: 50px;
+}
